Further testing, tidying up code, and removing issues found by spot bugs